# EsquaredG_PicoscopeMonitering

./: .gitignore  BuildPushNewYear.sh  Cargo.toml  README.md  clean_data.fish  output.csv  package-lock.json  package.json  webpack.config.js
.sass-cache/235028daaf268bba35a5c9dbd0bcd67a36e17466/: _floating-labels.scssc  _form-check.scssc  _form-control.scssc  _form-range.scssc  _form-select.scssc  _form-text.scssc  _input-group.scssc  _labels.scssc  _validation.scssc
.sass-cache/32b2c689406384961891d80a303741cda3a5379f/: _accordion.scssc  _alert.scssc  _badge.scssc  _breadcrumb.scssc  _button-group.scssc  _buttons.scssc  _card.scssc  _carousel.scssc  _close.scssc  _containers.scssc  _dropdown.scssc  _forms.scssc  _functions.scssc  _grid.scssc  _helpers.scssc  _images.scssc  _list-group.scssc  _mixins.scssc  _modal.scssc  _nav.scssc  _navbar.scssc  _pagination.scssc  _popover.scssc  _progress.scssc  _reboot.scssc  _root.scssc  _spinners.scssc  _tables.scssc  _toasts.scssc  _tooltip.scssc  _transitions.scssc  _type.scssc  _utilities.scssc  _variables.scssc  bootstrap.scssc
.sass-cache/466993ae1b40b4a6f58d2151e5706c7142efd24e/: _alert.scssc  _border-radius.scssc  _box-shadow.scssc  _breakpoints.scssc  _buttons.scssc  _caret.scssc  _clearfix.scssc  _container.scssc  _deprecate.scssc  _forms.scssc  _gradients.scssc  _grid.scssc  _image.scssc  _list-group.scssc  _lists.scssc  _pagination.scssc  _reset-text.scssc  _resize.scssc  _table-variants.scssc  _transition.scssc  (+3 more)
data-analysis/: ExampleRun_1kHz.csv  visualize-slice.ipynb  visualize-virt-channel.ipynb  visulize-data.ipynb
src/: app.rs  main.rs  pico.rs  virt_channels.rs
static/: index.html
(+19 files in other folders)
