[package]
name = "esquaredg_picoscope_monitering"
version = "0.1.0"
authors = ["Jasper <jasper@ngita.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
console = "0.13.0"
dialoguer = "0.7.1"
pico-sdk = "0.1.4"
signifix = "0.10.1"
actix-web = "3"
actix-files = "0.5.0"
env_logger = "0.8.2"
futures = "0.3.8"
serde_json = "1.0.60"

[dependencies.serde]
version = "1.0"
features = ["derive"]