[package]
name = "esquaredg_picoscope_monitering"
version = "0.1.0"
authors = ["Jasper <jasper@qrl.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
console = "0.14.1"
dialoguer = "0.8.0"
pico-sdk = "0.3.1"
signifix = "0.10.1"
actix-web = "3"
actix-files = "0.5.0"
env_logger = "0.8.2"
futures = "0.3.8"
serde_json = "1.0.60"
log = "0.4.11"
chrono = "0.4.19"
csv = "1.1.6"
native-dialog = "0.5.5"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
parking_lot = "0.11.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]
